<resources>
    <string name="app_name">Wiki_de_Star_Wars</string>
    <string name="height">Height</string>
    <string name="mass">Mass</string>
    <string name="gender">Gender</string>
    <string name="hair_color">Hair Color</string>
    <string name="skin_color">Skin Color</string>
    <string name="eye_color">Eye Color</string>
    <string name="birth_year">Birth Year</string>
    <string name="hoem_world">Hoem World</string>
    <string name="specie_name">Specie Name</string>
    <string name="favorite">Favorite</string>
    <string name="home">Home</string>
    <string name="imbt_favorite_border_desc">Favorite button border</string>
</resources>